--- a/templates/Accueil.html
+++ b/templates/Accueil.html
@@ -6,49 +6,60 @@
   <h1 style="text-align:center"> Formulaire d'inscription </h1>
 </header>
 
-<nav style="text-align:center; background-color:LightGray">
-  <a href="/Accueil">Accueil</a>
-  <a href="/page_recherche">Page_recherche</a>
-</nav>
+<body>
+  {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <div>
+            {% for category, message in messages %}
+                <p class="alert {{ category }}">{{ message }}</p>
+            {% endfor %}
+        </div>
+    {% endif %}
+  {% endwith %}
 
-<form method = "post" >
-    {% if not show_form %}
-      <button type="submit" name="connexion">Connexion</button>
-      <button type="submit" name="inscription">Inscription</button>
+  <nav style="text-align:center; background-color:LightGray">
+    <a href="/Accueil">Accueil</a>
+    <a href="/page_recherche">Page_recherche</a>
+    <a href="/Personnal">Profil</a>
+  </nav>
 
-    {% elif form_type == "connexion" %}
-      <label for="username">Identifiant :</label>
-      <input type="text" id="username" name="username" required><br><br>
+  <form method="post">
+      {% if user_connected %}
+          <p>Bienvenue, utilisateur connecté !</p>
+          <form method="post" action="/Accueil">
+            <button type="submit" name="logout">Déconnexion</button>
+        </form>
+      {% elif not show_form %}
+          <button type="submit" name="connexion">Connexion</button>
+          <button type="submit" name="inscription">Inscription</button>
+      {% elif form_type == "connexion" %}
+          <label for="username">Identifiant :</label>
+          <input type="text" id="username" name="username" required><br><br>
 
-      <label for="password">Mot de passe :</label>
-      <input type="password" id="password" name="password" required><br><br>
+          <label for="password">Mot de passe :</label>
+          <input type="password" id="password" name="password" required><br><br>
 
-      <button type="submit" name="validation_connexion">Validez</button>
-
-    {% elif form_type == "inscription" %}
-      <p>
-          Nom : <input type="text" name="nom" required><br>
-          Prénom : <input type="text" name="prenom" required><br>
-          Sexe : <input type="text" name="sexe" required><br>
-          Âge : <input type="number" min="10" name="age" required><br>
-          Nationalité : <input type="text" name="nationalite" required><br>
-          Adresse : <input type="text" name="adresse" required><br>
-          Téléphone : <input type="number" name="telephone" required><br>
-          Mail : <input type="email" name="mail" required><br>
-          Mot de passe :<input type="password" id="password" name="password" required><br><br>
-          <button type="submit" name="validation_inscription">Validez</button>
-      </p>
-
-    {% elif form_type == "connexion_succes" %}
-      <p>CONNEXION REUSSIE</p>
-      
-    {% elif form_type == "connexion_fail" %}
-      <p>CONNEXION ECHOUE</p>
-
-    {% elif form_type == "inscription_reussie" %}
-      <p>Inscription reussie vous pouvez retrouner a la page de connexion</p>
-  {% endif %}
-
-</form>
-
+          <button type="submit" name="validation_connexion">Validez</button>
+      {% elif form_type == "inscription" %}
+          <p>
+              Nom : <input type="text" name="nom" required><br>
+              Prénom : <input type="text" name="prenom" required><br>
+              Sexe : <input type="text" name="sexe" required><br>
+              Date de naissance : <input type="date" name="age" required><br>
+              Nationalité : <input type="text" name="nationalite" required><br>
+              Adresse : <input type="text" name="adresse" required><br>
+              Téléphone : <input type="number" name="telephone" required><br>
+              Mail : <input type="email" name="mail" required><br>
+              Mot de passe :<input type="password" id="password" name="password" required><br><br>
+              <button type="submit" name="validation_inscription">Validez</button>
+          </p>
+      {% elif form_type == "connexion_succes" %}
+          <p>CONNEXION REUSSIE</p>
+      {% elif form_type == "connexion_fail" %}
+          <p>CONNEXION ECHOUE</p>
+      {% elif form_type == "inscription_reussie" %}
+          <p>Inscription réussie. Vous pouvez retourner à la page de connexion.</p>
+      {% endif %}
+  </form>
+</body>
 </html>
