--- a/templates/page_recherche.html
+++ b/templates/page_recherche.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<title>Inscriptions à Poudlard</title>
+<title>Voyages</title>
 
 <header>
   <h1 style="text-align:center"> Voyages </h1>
@@ -9,6 +9,7 @@
 <nav style="text-align:center; background-color:LightGray">
   <a href="/Accueil">Accueil</a>
   <a href="/page_recherche">Page_recherche</a>
+  <a href="/Personnal">Profil</a>
 </nav>
 
 <!-- Barre de recherche -->
