--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,38 +1,61 @@
 <!doctype html>
 <html>
-<head>
-    <title>Détails du Voyage</title>
-    <style>
-        .details {
-            border: 1px solid black;
-            padding: 20px;
-            margin: 10px;
-        }
-    </style>
-</head>
+    <head>
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+     </head>
 <body>
     <header>
         <h1 style="text-align: center;">Détails du Voyage</h1>
     </header>
-
+    
+        <nav style="text-align:center; background-color:LightGray">
+            <a href="/Accueil">Accueil</a>
+            <a href="/page_recherche">Page_recherche</a>
+            <a href="/Personnal">Profil</a>
+            {% if work_connected %}
+                    <a href="/configTrip">Gérer les voyages</a>
+                {% endif %}
+                {%if work_resp %}
+                    <a href="/configUser">Gerer comptes</a>
+                {%endif%}
+          </nav>
+          <div class="nomvoyage"
+          <p>Voyage numéro : {{ details[0].id_voyage }}</p>
+          
+          </div>
+          <p>Départ le : {{ details[0].date_debut }}</p>
+          <p>Retour le : {{ details[0].date_de_fin }}</p>
+<div class="etape">
+    <p>Etapes :</p>
+</div>
     <div class="details">
         {% if details %}
-            {% for detail in details %}
-                <p>Voyage numéro : {{ detail.id_voyage }}</p>
-                <p>Ville : {{ detail.nom_ville }}</p>
-                <p>Date de départ : {{ detail.date_depart }}</p>
-                <p>Date d'arrivée : {{ detail.date_arrivée }}</p>
-                <p>Date de début : {{ detail.date_debut }}</p>
-                <p>Date de fin : {{ detail.date_de_fin }}</p>
+                <p>Ville : {{ details[0].nom_ville }}</p>
+                <p>Date de départ étape : {{ details[0].date_depart }}</p>
+                <p>Date de fin étape : {{ details[0].date_arrivée }}</p>
+                <p>Logement : {{ details[0].type_logement}}</p>
+                <p>Transport : {{ details[0].transport}}</p>
+                <p>Type: {{ details[0].type }}</p>
+                
+                
+                <hr>
+            
+            {% for detail in details[1:] %}
+                    <p>Ville : {{ detail.nom_ville }}</p>
+                <p>Date de départ étape : {{ detail.date_depart }}</p>
+                <p>Date de fin étape : {{ detail.date_arrivée }}</p>
                 <p>Logement : {{ detail.type_logement}}</p>
                 <p>Transport : {{ detail.transport}}</p>
                 <p>Type: {{ detail.type }}</p>
-                <p>Agence: {{ detail.Agence }} {{ detail.agence_adresse }} {{ detail.agence_ville }} {{ detail.agence_telephone }} </p>
-                <form method="POST" action="/detail/{{ detail.id_voyage }}">
-                    <button type="submit">Réserver ce voyage</button>
-                </form>
+                
                 <hr>
             {% endfor %}
+            <form method="POST" action="/detail/{{ details[0].id_voyage }}">
+                <button type="submit">Réserver ce voyage</button>
+            </form>
+            <p>Agence: {{ details[0].Agence }}</p>
+            <p>Adresse: {{ details[0].agence_adresse }}, {{ details[0].agence_ville }}</p>
+            <p>Téléphone: {{ details[0].agence_telephone }} </p>
         {% else %}
             <p>Aucun détail trouvé pour ce voyage.</p>
         {% endif %}
